infra/utl-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utl-dev
  namespace: utl-dev
spec:
  selector:
    matchLabels:
      app: utl-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: utl-dev
    spec:
      containers:
      - name: utl-dev
        image: eu.gcr.io/spry-cat-229914/utl:master-latest
        imagePullPolicy: Always
        command: ["yarn", "--cwd", "app", "start:qa"]
        ports:
        - containerPort: 8080
