infra/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: hello
    tier: client
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: hello
      tier: client
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: client
        track: stable
    spec:
      containers:
      - name: nginx
        image: "gcr.io/google-samples/hello-client:1.0"
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
