infra/server.yml
kind: Service
apiVersion: v1
metadata:
  name: server
  namespace: utl-qa
spec:
  selector:
    app: server
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  namespace: utl-qa
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: eu.gcr.io/spry-cat-229914/utl-server:master-latest
        ports:
        - containerPort: 3001
