infra/traefik-deployment.yml
# https://github.com/containous/traefik/blob/v1.7/examples/k8s/traefik-deployment.yaml


---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system

  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-conf
        - name: acme
          hostPath:
            path: /etc/acme/acme.json
      containers:
      - image: traefik:alpine
        name: traefik-ingress-lb
        volumeMounts:
          - mountPath: "/etc/traefik"
            name: "config"
          - mountPath: "/etc/acme"
            name: "acme"
        ports:
        - name: http
          containerPort: 80
        args:
        - --configfile=/etc/traefik/traefik.toml
        - --web
        - --kubernetes
        - --logLevel=INFO
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
  type: LoadBalancer
