infra/utl-service.yml
apiVersion: v1
kind: Service
metadata:
  name: utl-service
  namespace: utl-dev
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: utl-dev
