infra/utl-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: utl-ingress
  namespace: utl-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: dev.underthelimits.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: utl-service
          servicePort: 80
